hacked in a click detail to go along with hover detail

--- a/examples/hover.html
+++ b/examples/hover.html
@@ -84,7 +84,7 @@ graph.render();
 
 var legend = document.querySelector('#legend');
 
-var Hover = Rickshaw.Class.create(Rickshaw.Graph.HoverDetail, {
+var Hover = Rickshaw.Class.create(Rickshaw.Graph.ClickDetail, {
 
 	render: function(args) {
 
